fixtures/errors/sharedarraybuffer_grow_invalid.js
var fixed = new SharedArrayBuffer(4);
fixed.grow(8);